--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ section{
   padding:90px 20px;
   text-align:center;
   opacity:0;
-  transform:translateY(30px);
-  transition:1s;
+  transform:translateY(50px);
+  transition:1s ease-out;
 }
-section.visible{opacity:1; transform:none;}
+section.visible{opacity:1; transform:translateY(0);}
 
 h1.names{
   font-family:'Great Vibes',cursive;
@@ -77,6 +77,7 @@ p{line-height:1.6; margin-bottom:15px;}
   object-fit:cover;
 }
 
+/* Кнопка музыки */
 button{
   background:var(--accent);
   color:white;
@@ -85,8 +86,14 @@ button{
   border-radius:30px;
   font-size:16px;
   cursor:pointer;
+  transition:0.3s;
+}
+button:hover{
+  transform: scale(1.1);
+  background-color: #7ea38d;
 }
 
+/* Дресс-код */
 .palette{
   display:flex;
   justify-content:center;
@@ -97,6 +104,7 @@ button{
   width:40px; height:40px; border-radius:50%;
 }
 
+/* Карта */
 .map iframe{
   width:100%;
   height:300px;
@@ -104,6 +112,7 @@ button{
   border-radius:18px;
 }
 
+/* Календарь */
 .calendar-box{
   background:white;
   padding:30px;
@@ -123,36 +132,41 @@ button{
   position:relative;
 }
 
-.calendar-date{
-  font-size:28px;
-  font-weight:bold;
-}
-
-/* Сердце для даты свадьбы */
+/* Сердце для даты свадьбы с цифрой внутри */
 .calendar-heart{
+  position: relative;
+  width:60px;
+  height:60px;
+  background: red;
+  transform: rotate(-45deg);
+  margin:auto;
+  animation: pulse 1.2s infinite;
   display:flex;
   justify-content:center;
   align-items:center;
-  width:50px; height:50px;
-  background: #F7C1C1;
-  clip-path: polygon(
-    50% 0%, 
-    61% 15%, 
-    75% 15%, 
-    85% 25%, 
-    85% 38%, 
-    50% 80%, 
-    15% 38%, 
-    15% 25%, 
-    25% 15%, 
-    39% 15%
-  ); /* форма сердца */
   color:white;
   font-weight:bold;
   font-size:24px;
-  margin:auto;
 }
 
+.calendar-heart::before,
+.calendar-heart::after{
+  content:"";
+  position:absolute;
+  width:60px;
+  height:60px;
+  background:red;
+  border-radius:50%;
+}
+
+.calendar-heart::before{ top:-30px; left:0; }
+.calendar-heart::after{ top:0; left:30px; }
+
+.calendar-heart span{
+  transform: rotate(45deg); /* цифра выровнена внутри сердца */
+}
+
+/* Таймер */
 .countdown{
   font-size:48px;
   font-weight:bold;
@@ -160,6 +174,7 @@ button{
   margin-top:20px;
 }
 
+/* Формы */
 input,select,textarea{
   width:100%;
   padding:12px;
@@ -169,6 +184,7 @@ input,select,textarea{
 }
 textarea{min-height:90px}
 
+/* Плавающие сердечки */
 #hearts{
   position:fixed;
   inset:0;
@@ -177,18 +193,30 @@ textarea{min-height:90px}
 .heart-float{
   position:absolute;
   color: var(--heart);
-  animation:float 6s linear forwards;
+  font-size:20px;
+  animation: float 5s linear forwards, sway 3s ease-in-out infinite alternate;
 }
 @keyframes float{
-  from{transform:translateY(100vh);opacity:0}
-  to{transform:translateY(-10vh);opacity:1}
+  from{transform: translateY(100vh) scale(0);}
+  to{transform: translateY(-10vh) scale(1);}
+}
+@keyframes sway{
+  0% {transform: translateX(0);}
+  100% {transform: translateX(20px);}
+}
+
+/* Анимация пульса сердца */
+@keyframes pulse{
+  0% {transform: rotate(-45deg) scale(1);}
+  50% {transform: rotate(-45deg) scale(1.3);}
+  100% {transform: rotate(-45deg) scale(1);}
 }
 </style>
 </head>
 <body>
 <div id="hearts"></div><!-- ГЛАВНАЯ -->
 <section>
-  <h1 class="names">Анна & Дмитрий</h1>
+  <h1 class="names">Никита & Анна</h1>
   <h1 class="date-main">8 августа 2026</h1>
 
   <div class="hero-photo">
@@ -212,7 +240,7 @@ textarea{min-height:90px}
       <div>Пн</div><div>Вт</div><div>Ср</div><div>Чт</div><div>Пт</div><div>Сб</div><div>Вс</div>
       <div></div><div></div><div></div><div></div><div></div><div></div><div>1</div>
       <div>2</div><div>3</div><div>4</div><div>5</div><div>6</div><div>7</div>
-      <div class="calendar-heart">8</div> <!-- дата свадьбы в форме сердца -->
+      <div class="calendar-heart"><span>8</span></div> <!-- дата свадьбы в сердце -->
       <div>9</div><div>10</div><div>11</div><div>12</div><div>13</div><div>14</div><div>15</div>
       <div>16</div><div>17</div><div>18</div><div>19</div><div>20</div><div>21</div><div>22</div>
       <div>23</div><div>24</div><div>25</div><div>26</div><div>27</div><div>28</div><div>29</div>
@@ -282,10 +310,10 @@ textarea{min-height:90px}
 <audio id="music" loop>
   <source src="music.mp3" type="audio/mpeg">
 </audio><script>
-// Анимация появления секций при скролле
-const obs = new IntersectionObserver(e=>{
-  e.forEach(x=>{
-    if(x.isIntersecting) x.target.classList.add('visible');
+// Плавное появление секций при скролле
+const obs = new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(e.isIntersecting) e.target.classList.add('visible');
   });
 },{threshold:0.2});
 document.querySelectorAll('section').forEach(s=>obs.observe(s));
