--- a/index.html
+++ b/index.html
@@ -133,37 +133,48 @@ button:hover{
 }
 
 /* Сердце для даты свадьбы с цифрой внутри */
-.calendar-heart{
+.calendar-heart {
   position: relative;
-  width:60px;
-  height:60px;
-  background: red;
-  transform: rotate(-45deg);
-  margin:auto;
-  animation: pulse 1.2s infinite;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  color:white;
-  font-weight:bold;
-  font-size:24px;
+  width: 70px;
+  height: 70px;
+  margin: auto;
+  animation: pulse 1.4s infinite;
 }
 
 .calendar-heart::before,
-.calendar-heart::after{
-  content:"";
-  position:absolute;
-  width:60px;
-  height:60px;
-  background:red;
-  border-radius:50%;
+.calendar-heart::after {
+  content: "";
+  position: absolute;
+  width: 35px;
+  height: 55px;
+  background: #c46b6b; /* пастельно-бордовый */
+  border-radius: 35px 35px 0 0;
+  top: 0;
 }
 
-.calendar-heart::before{ top:-30px; left:0; }
-.calendar-heart::after{ top:0; left:30px; }
+.calendar-heart::before {
+  left: 35px;
+  transform: rotate(-45deg);
+  transform-origin: 0 100%;
+}
 
-.calendar-heart span{
-  transform: rotate(45deg); /* цифра выровнена внутри сердца */
+.calendar-heart::after {
+  left: 0;
+  transform: rotate(45deg);
+  transform-origin: 100% 100%;
+}
+
+/* ЦИФРА */
+.calendar-heart span {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 26px;
+  font-weight: bold;
+  color: white;
+  z-index: 2;
 }
 
 /* Таймер */
@@ -185,24 +196,31 @@ input,select,textarea{
 textarea{min-height:90px}
 
 /* Плавающие сердечки */
-#hearts{
-  position:fixed;
-  inset:0;
-  pointer-events:none;
+#hearts {
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: 0;
 }
-.heart-float{
-  position:absolute;
-  color: var(--heart);
-  font-size:20px;
-  animation: float 5s linear forwards, sway 3s ease-in-out infinite alternate;
+
+.heart-float {
+  position: absolute;
+  color: #c46b6b; /* пастельный бордовый */
+  font-size: 18px;
+  animation: floatUp 6s linear forwards;
+  opacity: 0.8;
 }
-@keyframes float{
-  from{transform: translateY(100vh) scale(0);}
-  to{transform: translateY(-10vh) scale(1);}
-}
-@keyframes sway{
-  0% {transform: translateX(0);}
-  100% {transform: translateX(20px);}
+
+@keyframes floatUp {
+  from {
+    transform: translateY(0) scale(0.6);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(-120vh) scale(1.1);
+    opacity: 1;
+  }
 }
 
 /* Анимация пульса сердца */
@@ -345,14 +363,19 @@ setInterval(countdown,1000);
 countdown();
 
 // Плавающие сердечки пастельного бордового
-setInterval(()=>{
-  const h=document.createElement('div');
-  h.className='heart-float';
-  h.textContent='♥';
-  h.style.left=Math.random()*100+'%';
-  document.getElementById('hearts').appendChild(h);
-  setTimeout(()=>h.remove(),6000);
-},500);
+setInterval(() => {
+  const heart = document.createElement("div");
+  heart.className = "heart-float";
+  heart.textContent = "♥";
+
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.top = Math.random() * 100 + "vh"; // ← ВАЖНО
+  heart.style.fontSize = 14 + Math.random() * 14 + "px";
+
+  document.getElementById("hearts").appendChild(heart);
+
+  setTimeout(() => heart.remove(), 6000);
+}, 400);
 
 // Форма RSVP
 document.getElementById('rsvp').onsubmit = e=>{
@@ -363,3 +386,4 @@ document.getElementById('rsvp').onsubmit = e=>{
 </script>
 </body>
 </html>
+
