--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
 
 *{box-sizing:border-box;}
 
-body{
-  margin:0;
-  font-family:'Montserrat',sans-serif;
-  color:var(--text);
-  background-color: var(--bg);
+body {
+  margin: 0;
+  font-family: 'Georgia', serif;
+  background: #f3efe6; /* пастельно-бежевый */
+  color: #2f3e34;
 }
 
 section{
   max-width:800px;
   margin:auto;
-  padding:90px 20px;
+  background: transparent;
+  padding: 60px 20px;
+}
   text-align:center;
   opacity:0;
   transform:translateY(50px);
@@ -113,8 +115,10 @@ button:hover{
 }
 
 /* Календарь */
-.calendar-box{
-  background:white;
+.calendar-box {
+  background: rgba(255,255,255,0.6); /* лёгкая подложка */
+  border-radius: 20px;
+}
   padding:30px;
   border-radius:24px;
   text-align:center;
@@ -419,6 +423,7 @@ document.getElementById('rsvp').onsubmit = e=>{
 </script>
 </body>
 </html>
+
 
 
 
