--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 <p><strong>22:00</strong> — Танцы</p>
 </div>
 </section>
+  <section>
+  <h2>Дресс-код</h2>
+  <p style="font-size:18px;line-height:1.6;">
+    Мы будем рады, если поддержите стиль 🤍
+  </p>
+  <div class="palette">
+    <div class="color" style="background:#556b2f;"></div> <!-- Темно-зеленый / болотный -->
+    <div class="color" style="background:#b14b4b;"></div> <!-- Пастельно-бордовый -->
+    <div class="color" style="background:#f3efe6;"></div> <!-- Бежевый -->
+    <div class="color" style="background:#808000;"></div> <!-- Оливковый -->
+  </div>
+</section>
 <section>
 <h2>До свадьбы осталось</h2>
 <div class="countdown" id="timer"></div>
