--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 <body>
 <div id="hearts"></div>
 <section>
-<h1 class="names">Анна & Дмитрий</h1>
+<h1 class="names">Никита & Анна</h1>
 <div class="date-main">8 августа 2026</div>
 <div class="hero-photo"><img src="photo.jpg" alt="Фото"></div>
 <p style="font-size:18px;line-height:1.6;">С огромной радостью приглашаем вас разделить с нами один из самых тёплых и счастливых дней нашей жизни 🤍</p>
@@ -75,7 +75,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
   <div class="palette">
     <div class="color" style="background:#556b2f;"></div> <!-- Темно-зеленый / болотный -->
     <div class="color" style="background:#b14b4b;"></div> <!-- Пастельно-бордовый -->
-    <div class="color" style="background:#f3efe6;"></div> <!-- Бежевый -->
+    <div class="color" style="background:#e0d6c3;"></div> 
     <div class="color" style="background:#808000;"></div> <!-- Оливковый -->
   </div>
 </section>
