--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ section{padding:60px 20px;text-align:center;}
 .names{font-family:'Great Vibes', cursive;font-size:56px;color:#2f4f3e;}
 .date-main{font-size:32px;margin-bottom:30px;}
 .hero-photo img{width:320px;height:320px;object-fit:cover;border-radius:12px;box-shadow:0 12px 30px rgba(0,0,0,0.25);}
-button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color:white;font-size:16px;}
+button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color:white;font-size:16px;margin-top:12px;}
 .calendar-box{background:rgba(255,255,255,0.65);padding:24px;border-radius:24px;max-width:380px;margin:auto;}
 .calendar-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:10px;margin-top:15px;}
 .calendar-heart svg{width:72px;height:66px;}
@@ -37,8 +37,8 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 <p style="font-size:18px;line-height:1.6;">
 С огромной радостью приглашаем вас разделить с нами один из самых тёплых и счастливых дней нашей жизни 🤍
 </p>
-<!-- Кнопка запуска музыки + таймера + сердечек -->
-<button onclick="startAll()">Включить музыку и таймер ♫</button>
+<!-- Кнопка управления музыкой -->
+<button onclick="toggleMusic()">Стоп/Включить музыку ♫</button>
 </section>
 
 <section>
@@ -138,11 +138,18 @@ function startHearts(){
   },500);
 }
 
-function startAll(){
-  const music=document.getElementById("music");
-  if(music){music.play().catch(()=>{alert("Нажмите кнопку ещё раз для запуска музыки 🎵");});}
+// Запуск таймера и сердечек сразу при загрузке страницы
+window.addEventListener("load", ()=>{
   startCountdown();
   startHearts();
+});
+
+// Управление музыкой
+function toggleMusic(){
+  const music=document.getElementById("music");
+  if(!music) return;
+  if(music.paused) music.play();
+  else music.pause();
 }
 </script>
 </body>
