--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 <div id="hearts"></div>
 
 <section>
-<h1 class="names">Анна & Дмитрий</h1>
+<h1 class="names">Никита & Анна</h1>
 <div class="date-main">8 августа 2026</div>
 <div class="hero-photo">
   <img src="photo.jpg" alt="Фото">
