--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
   <img src="photo.jpg" alt="Фото">
 </div>
 <p style="font-size:18px;line-height:1.6;">
-С огромной радостью приглашаем вас разделить с нами один из самых тёплых и счастливых дней нашей жизни 🤍
+С огромной радостью приглашаем вас разделить с нами один из самых тёплых и счастливых дней в нашей жизни 🤍
 </p>
 <!-- Кнопка управления музыкой -->
 <button onclick="toggleMusic()">Стоп/Включить музыку ♫</button>
