--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
   <img src="photo.jpg" alt="Фото">
 </div>
 <p style="font-size:18px;line-height:1.6;">
-С огромной радостью приглашаем вас разделить с нами один из самых тёплых и счастливых дней нашей жизни 🤍
+ДОРОГИЕ РОДНЫЕ И БЛИЗКИЕ! Самое главное и ценное в жизни-это семья! 
+  Мы будем рады видеть Вас на торжестве, посвященному нашему бракоссочетанию 🤍
 </p>
 <!-- Кнопка управления музыкой -->
 <button onclick="toggleMusic()">Стоп/Включить музыку ♫</button>
 </section>
 
 <section>
-<h2>Август 2026</h2>
+<h2>Тот самый день, когда мы станем семьей Август 2026</h2>
 <div class="calendar-box">
 <div class="calendar-grid">
 <div>Пн</div><div>Вт</div><div>Ср</div><div>Чт</div><div>Пт</div><div>Сб</div><div>Вс</div>
@@ -66,7 +67,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 
 <section>
 <h2>Дресс-код</h2>
-<p style="font-size:18px;line-height:1.6;">Мы будем рады, если поддержите стиль 🤍</p>
+<p style="font-size:18px;line-height:1.6;">Мы очень старались сделать празник красивым, поэтому мы будем рады, еслди в своих нарядах Вы поддержите цветовую гамму нашей свадьбы🤍</p>
 <div class="palette">
   <div class="color" style="background:#556b2f;"></div>
   <div class="color" style="background:#b14b4b;"></div>
@@ -76,7 +77,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 </section>
 
 <section>
-<h2>Место проведения</h2>
+<h2>Место проведения нашего торжества</h2>
 <p>Волгоградская область, г. Михайловка, ул. Ким, д.2<br>Ресторан «Wedding Hall»</p>
 <p><strong>Пожалуйста, приезжайте заранее 🤍</strong></p>
 <div class="map-container">
@@ -87,11 +88,11 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 <section>
 <h2>Тайминг вечера</h2>
 <div class="timing-list">
-<p><strong>17:00</strong> — Сбор гостей</p>
-<p><strong>18:00</strong> — Церемония</p>
-<p><strong>19:00</strong> — Праздничный ужин</p>
-<p><strong>20:30</strong> — Тосты и развлечения</p>
-<p><strong>22:00</strong> — Танцы</p>
+<p><strong>09:20</strong> — Роспись в ЗАГСе</p>
+<p><strong>11:30</strong> — Начало банкета</p>
+<p><strong>12:00</strong> — Праздничные мероприятия</p>
+<p><strong>19:00</strong> — Тосты,развлечения и танцы</p>
+<p><strong>20:00</strong> — Окончание банкета</p>
 </div>
 </section>
 
