--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 
 <section>
 <h2>Дресс-код</h2>
-<p style="font-size:18px;line-height:1.6;">Мы очень старались сделать празник красивым, поэтому мы будем рады, еслди в своих нарядах Вы поддержите цветовую гамму нашей свадьбы🤍</p>
+<p style="font-size:18px;line-height:1.6;">Мы очень старались сделать празник красивым, поэтому мы будем рады, если в своих нарядах Вы поддержите цветовую гамму нашей свадьбы🤍</p>
 <div class="palette">
   <div class="color" style="background:#556b2f;"></div>
   <div class="color" style="background:#b14b4b;"></div>
@@ -96,6 +96,41 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 </div>
 </section>
 
+  <section id="survey">
+  <h2>Опрос для гостей</h2>
+  <p style="font-size:18px;line-height:1.6;">
+    Пожалуйста, ответьте на несколько вопросов — нам будет очень приятно 🤍
+  </p>
+
+  <form>
+    <p>
+      <strong>Ваше имя:</strong><br>
+      <input type="text" placeholder="Введите имя" required
+        style="padding:10px;width:80%;max-width:300px;">
+    </p>
+
+    <p>
+      <strong>Сможете ли вы присутствовать?</strong><br>
+      <label><input type="radio" name="attendance"> Да, с радостью</label><br>
+      <label><input type="radio" name="attendance"> К сожалению, не смогу</label>
+    </p>
+
+    <p>
+      <strong>Предпочтения по напиткам:</strong><br>
+      <label><input type="checkbox"> Вино/Шампанское</label><br>
+      <label><input type="checkbox"> Крепкий алкоголь</label><br>
+      <label><input type="checkbox"> Безалкогольные</label>
+    </p>
+
+    <p>
+      <strong>Комментарий или пожелание:</strong><br>
+      <textarea rows="4" style="width:80%;max-width:320px;"></textarea>
+    </p>
+
+    <button type="submit">Отправить 🤍</button>
+  </form>
+</section>
+  
 <section>
 <h2>До свадьбы осталось</h2>
 <div class="countdown" id="timer"></div>
