--- a/index.html
+++ b/index.html
@@ -24,6 +24,41 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 .color{width:36px;height:36px;border-radius:50%;border:2px solid #2f3e34;}
 .countdown{font-size:28px;font-weight:bold;margin-top:20px;}
 #hearts{position:fixed;inset:0;pointer-events:none;}
+  #telegram-chat {
+  background: rgba(255, 255, 255, 0.25);
+  padding: 40px 20px;
+  margin: 60px auto;
+  border-radius: 20px;
+  max-width: 500px;
+  text-align: center;
+  backdrop-filter: blur(6px);
+}
+
+#telegram-chat h2 {
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+
+#telegram-chat p {
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 25px;
+}
+
+.tg-button {
+  display: inline-block;
+  padding: 14px 28px;
+  background: #2f5d50; /* тёмно-зелёный / болотный */
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  border-radius: 30px;
+  transition: 0.3s;
+}
+
+.tg-button:hover {
+  background: #24483d;
+}
 </style>
 </head><body>
 <div id="hearts"></div>
@@ -118,6 +153,18 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
     <button type="submit">Отправить 🤍</button>
     <p id="result"></p>
   </form>
+</section>
+
+  <section id="telegram-chat" class="fade-in">
+  <h2>Беседа гостей 💬</h2>
+  <p>
+    Мы создали беседу в Telegram,<br>
+    где будем делиться новостями и фотографиями ✨
+  </p>
+
+  <a href="https://t.me/ТВОЯ_ССЫЛКА" target="_blank" class="tg-button">
+    Перейти в беседу
+  </a>
 </section>
   
 <section>
