--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
     где будем делиться новостями и фотографиями ✨
   </p>
 
-  <a href="https://t.me/ТВОЯ_ССЫЛКА" target="_blank" class="tg-button">
+  <a href="https://t.me/+5ZZjW8CgcZ43YzRi" target="_blank" class="tg-button">
     Перейти в беседу
   </a>
 </section>
