--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 </section>
 
   <section id="survey">
-  <h2>Опрос для гостей</h2>
+  <h2>Опрос для гостей, напишите свое фио, подтвердите присутствие и выберите предпочетаемый алкоголь</h2>
 
   <form id="surveyForm">
-    <input type="text" name="name" placeholder="Ваше имя" required><br><br>
+    <input type="text" name="name" placeholder="Ваша фамилия и имя" required><br><br>
 
     <label>
       <input type="radio" name="attendance" value="Приду" required> Приду
