--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ button{padding:12px 28px;border:none;border-radius:30px;background:#6b8f7d;color
 </div>
 <p style="font-size:18px;line-height:1.6;">
 ДОРОГИЕ РОДНЫЕ И БЛИЗКИЕ! Самое главное и ценное в жизни-это семья! 
-  Мы будем рады видеть Вас на торжестве, посвященному нашему бракоссочетанию 🤍
+  Мы будем рады видеть Вас на торжестве, посвященному нашему бракосочетанию 🤍
 </p>
 <!-- Кнопка управления музыкой -->
 <button onclick="toggleMusic()">Стоп/Включить музыку ♫</button>
