--- a/index.html
+++ b/index.html
@@ -227,15 +227,15 @@ function toggleMusic(){
  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
 (function(){
-  emailjs.init("-CVZMXUwQCMD_3XjU");
+  emailjs.init("VQalVCN5sRtQei2Sj");
 })();
 
 document.getElementById("surveyForm").addEventListener("submit", function(e){
   e.preventDefault();
 
   emailjs.sendForm(
-    "service_07pnsfd",
-    "template_m177ixi",
+    "service_ekmkjnr",
+    "template_w01wuga",
     this
   ).then(
     () => alert("Отправлено 🤍"),
